--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chai": "^6.0.1",
     "cypress": "^15.2.0",
     "cypress-file-upload": "^5.0.8",
+    "cypress-real-events": "^1.15.0",
     "esbuild": "^0.25.9",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^5.0.0",
