--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@cypress/webpack-preprocessor": "^7.0.1",
     "@types/chai": "^5.2.2",
     "@types/cypress": "^0.1.6",
+    "@types/jquery": "^3.5.33",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.3.3",
     "chai": "^6.0.1",
