--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run:ui": "cypress run --spec 'cypress/e2e/features/**/*.feature' --reporter mochawesome --reporter-options reportDir=cypress/reports/ui,json=true,html=true,overwrite=true",
+    "cypress:run:api": "cypress run --spec 'cypress/api/features/**/*.feature' --reporter mochawesome --reporter-options reportDir=cypress/reports/api,json=true,html=true,overwrite=true",
+    "test": "npm run cypress:run:ui && npm run cypress:run:api"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,6 @@
     "url": "https://github.com/gmmirand/lumaQaTest/issues"
   },
   "homepage": "https://github.com/gmmirand/lumaQaTest#readme",
-  "cypress-cucumber-preprocessor": {
-    "stepDefinitions": "cypress/e2e/step_definitions/**/*.{js,ts}",
-    "specPattern": "cypress/e2e/features/**/*.feature"
-  },
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^23.1.0",
     "@cucumber/gherkin": "^35.0.0",
@@ -31,7 +28,6 @@
     "@types/cypress": "^0.1.6",
     "@types/jquery": "^3.5.33",
     "@types/mocha": "^10.0.10",
-    "@types/node": "^24.3.3",
     "chai": "^6.0.1",
     "cypress": "^15.2.0",
     "cypress-file-upload": "^5.0.8",
