--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,28 +2,40 @@ name: Cypress Tests
 
 on:
   pull_request:
-    branches: [main]
+    branches:
+      - main
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
-    - name: Install dependencies
-      run: npm ci
-    - name: Run UI Tests
-      run: npm run cypress:run:ui
-    - name: Run API Tests
-      run: npm run cypress:run:api
-    - name: Upload Reports
-      uses: actions/upload-artifact@v4
-      with:
-        name: cypress-reports
-        path: cypress/reports/
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Cypress tests (UI + API)
+        run: |
+          npx cypress run --reporter mochawesome \
+            --reporter-options "reportDir=cypress/reports/mochawesome,overwrite=false,html=false,json=true"
+
+      - name: Merge Mochawesome JSONs
+        run: npx mochawesome-merge cypress/reports/mochawesome/*.json > cypress/reports/mochawesome/mochawesome.json
+
+      - name: Generate HTML report
+        run: npx marge cypress/reports/mochawesome/mochawesome.json --reportDir cypress/reports/mochawesome --inline
+
+      - name: Upload Cypress report
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-report
+          path: cypress/reports/mochawesome
