--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Cypress tests (UI + API)
+      - name: Run Cypress tests (UI + API) on Chrome
         run: |
-          npx cypress run --reporter mochawesome \
+          npx cypress run --browser chrome --reporter mochawesome \
             --reporter-options "reportDir=cypress/reports/mochawesome,overwrite=false,html=false,json=true"
 
       - name: Merge Mochawesome JSONs
