--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -23,18 +23,27 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Cypress tests (UI + API) on headless Chrome
+      - name: Run Cypress tests (UI + API) on Chrome
         run: |
-          npx cypress run --browser chrome --headless --reporter mochawesome \
+          mkdir -p cypress/reports/mochawesome
+          npx cypress run --browser chrome --reporter mochawesome \
             --reporter-options "reportDir=cypress/reports/mochawesome,overwrite=false,html=false,json=true"
 
-      - name: Generate HTML report
+      - name: Merge Mochawesome JSONs
+        run: |
+          JSON_FILES=$(ls cypress/reports/mochawesome/*.json || true)
+          if [ -n "$JSON_FILES" ]; then
+            npx mochawesome-merge cypress/reports/mochawesome/*.json > cypress/reports/mochawesome/mochawesome.json
+          else
+            echo "No JSON reports found, skipping merge"
+          fi
+
+      - name: Generate consolidated HTML report
         run: |
           if [ -f cypress/reports/mochawesome/mochawesome.json ]; then
-            npx marge cypress/reports/mochawesome/mochawesome.json \
-              --reportDir cypress/reports/mochawesome --inline
+            npx marge cypress/reports/mochawesome/mochawesome.json --reportDir cypress/reports/mochawesome --inline
           else
-            echo "No JSON report found, skipping HTML generation"
+            echo "No merged JSON report found, skipping HTML generation"
           fi
 
       - name: Upload Cypress report
